--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
     <div class="main">
@@ -18,6 +22,7 @@
             <h5>Fashion Week -&copy2021</h5>
             <h5>News / Article</h5>
             <h5>Contact</h5>
+            <h6> <i class="ri-menu-3-line"></i></h6>
         </div>
         <div class="center">
             <h1>select</h1>
@@ -26,12 +31,14 @@
             <h1>scene</h1>
         </div>
         <div class="bottom">
-            <h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit hic fugiat quia recusandae quis neque, provident numquam aliquid asperiores culpa perferendis a ipsum vitae doloribus impedit totam dolore molestiae ratione ea. Culpa nihil nobis magnam repellendus exercitationem necessitatibus sequi! Aut quis quasi recusandae quo voluptates, modi nostrum aspernatur, neque dicta corrupti eos temporibus quidem distinctio doloremque delectus laborum tempora obcaecati?X</h5>
+            <h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit hic fugiat quia recusandae quis neque, provident numquam aliquid asperiores culpa perferendis a ipsum vitae doloribus impedit totam dolore molestiae ratione ea. Culpa nihil nobis magnam repellendus exercitationem necessitatibus sequi! Aut quis quasi recusandae quo voluptates, modi nostrum aspernatur</h5>
         </div>
         <div class="right">
             <video src="./modelvideo.mp4" loop muted autoplay></video>
         </div>
-
+        <div class="arrow">
+            <i class="ri-arrow-right-line"></i>
+        </div>
     </div>
 </body>
 </html>
