--- a/dribble_UI_clone/index.html
+++ b/dribble_UI_clone/index.html
@@ -13,6 +13,7 @@
     <div class="page1">
         <div class="nav">
             <div class="nav1">
+                <i class="ri-menu-line"></i>
                 <?xml version="1.0" standalone="no"?>
                 <!DOCTYPE svg
                     PUBLIC "-//W3C//DTD SVG 20010904//EN" "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
@@ -71,7 +72,7 @@ l-38 3 -11 65 c-29 172 -133 229 -283 157 -73 -36 -74 -22 -9 185 59 187 66
                 <!-- nav new add -->
 
 
-                <div class="input-div">
+                <div class="input-div input-div1">
                     <input type="text" placeholder="What are you looking for?">
                     <div class="input-inner">
                         <h2 id="show">Shorts</h2>
